// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.updateArtifacts() catches read error 1`] = `
Array [
  Object {
    "artifactError": Object {
      "lockFile": "Podfile.lock",
      "stderr": "read error",
    },
  },
]
`;

exports[`.updateArtifacts() catches write error 1`] = `
Array [
  Object {
    "artifactError": Object {
      "lockFile": "Podfile.lock",
      "stderr": "not found",
    },
  },
]
`;

exports[`.updateArtifacts() does not return stderr if lockfile has changed 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "New Podfile.lock",
      "name": "Podfile.lock",
    },
  },
]
`;

exports[`.updateArtifacts() dynamically selects Docker image tag 1`] = `"docker run --rm --user=ubuntu -v /tmp/github/some/repo:/tmp/github/some/repo -w /tmp/github/some/repo --entrypoint pod renovate/cocoapods:1.2.4 install"`;

exports[`.updateArtifacts() falls back to the \`latest\` Docker image tag 1`] = `"docker run --rm --user=ubuntu -v /tmp/github/some/repo:/tmp/github/some/repo -w /tmp/github/some/repo --entrypoint pod renovate/cocoapods:latest install"`;

exports[`.updateArtifacts() returns pod exec error 1`] = `
Array [
  Object {
    "artifactError": Object {
      "lockFile": "Podfile.lock",
      "stderr": "exec exception",
    },
  },
]
`;

exports[`.updateArtifacts() returns pod exec stderr 1`] = `
Array [
  Object {
    "artifactError": Object {
      "lockFile": "Podfile.lock",
      "stderr": "Something happened",
    },
  },
]
`;

exports[`.updateArtifacts() returns updated Podfile 1`] = `
Array [
  Object {
    "file": Object {
      "contents": "New Podfile",
      "name": "Podfile.lock",
    },
  },
]
`;

exports[`.updateArtifacts() returns updated Podfile 2`] = `"docker run --rm -v /tmp/github/some/repo:/tmp/github/some/repo -w /tmp/github/some/repo --entrypoint pod renovate/cocoapods:latest install"`;
